Fixes the block/mute button being cut off
[Fixes: #141271137](https://www.pivotaltracker.com/story/show/141271137)

--- a/src/components/users/UserRenderables.css
+++ b/src/components/users/UserRenderables.css
@@ -60,7 +60,7 @@ User Compact  */
 .UserCompact > .RelationshipContainer {
   position: absolute;
   top: 5px;
-  right: -8px;
+  right: 0;
 }
 
 /* -------------------------------------
